--- a/Student_exercises/Student_exercise2.ipynb
+++ b/Student_exercises/Student_exercise2.ipynb
@@ -2,26 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter for first three programing languages\n",
-      "{'name': 'Nikki', 'age': '23', 'years coding': '8'}\n",
-      "('a', 'b', 'c')\n",
-      "['a', 'f', 'g']\n",
-      "{'a'}\n"
+      "Not a int\n",
+      "please enter for first three programing languages\n"
      ]
     }
    ],
    "source": [
     "\n",
+    "def userinput(string):\n",
+    "    uinput = -2\n",
+    "    while uinput < 0 or uinput > 100:\n",
+    "        uinput = input(string)\n",
+    "        try:\n",
+    "            uinput = int(uinput)\n",
+    "        except:\n",
+    "            print(\"Not a int\")\n",
+    "            uinput = -2\n",
+    "        else:\n",
+    "            return uinput\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "name = input(\"please enter your name: \")\n",
-    "age = input(\"please enter your age: \")\n",
-    "codingYears = input(\"please enter the amount of years you have coded for: \")\n",
+    "\n",
+    "age = userinput(\"please enter your age: \")\n",
+    "codingYears = userinput(\"please enter the amount of years you have coded for: \")\n",
     "\n",
     "userdict = {\"name\" : name,\n",
     "           \"age\" : age, \n",
@@ -46,14 +61,23 @@
     "                  \"firstLanguages\" : firstLanguages,\n",
     "                  \"favoriteLanguages\" : favoriteLanguages, \n",
     "                  \"setintersection\" : setintersection }\n",
+    "try:\n",
+    "    files = open(\"employees.txt\", \"a\")\n",
+    "except:\n",
+    "    files = open(\"employees.txt\", \"w\")\n",
+    "    files.close()\n",
+    "    files = open(\"employees.txt\", \"a\")\n",
     "\n",
-    "print(collectiondict[\"userdict\"])\n",
+    "files.write(str(collectiondict[\"userdict\"].items()) + \"\\n\")\n",
     "\n",
-    "print(collectiondict[\"firstLanguages\"])\n",
+    "files.write(str(collectiondict[\"firstLanguages\"])  + \"\\n\")\n",
     "\n",
-    "print(collectiondict[\"favoriteLanguages\"])\n",
+    "files.write(str(collectiondict[\"favoriteLanguages\"])  + \"\\n\")\n",
     "\n",
-    "print(collectiondict[\"setintersection\"])\n"
+    "files.write(str(collectiondict[\"setintersection\"])  + \"\\n\")\n",
+    "files.close()\n",
+    "\n",
+    "\n"
    ]
   },
   {
